--- a/quote-generator/src/components/QuoteCard.css
+++ b/quote-generator/src/components/QuoteCard.css
@@ -11,7 +11,7 @@
 }
 
 .card-avatar-section {
-  width: 23%;
+  width: 25%;
   min-width: 100px;
   display: flex;
   justify-content: center;
